// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconLink />  renders a Link with "to" 1`] = `
.c2 {
  display: block;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  position: relative;
  width: 1.5em;
  height: 1.5em;
  background-repeat: no-repeat;
  background-color: rgba(0,0,0,0);
  color: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c3 {
  display: block;
  pointer-events: none;
  -webkit-transform-origin: 50% 50% 0px;
  -ms-transform-origin: 50% 50% 0px;
  transform-origin: 50% 50% 0px;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  fill: currentColor;
}

.c0 {
  -webkit-transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955);
  transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955);
  color: #4C81D6;
  cursor: pointer;
}

.c0:hover,
.c0:focus {
  color: #275AAD;
}

.c1 {
  -webkit-transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955),-webkit-transform 100ms linear;
  -webkit-transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955),transform 100ms linear;
  transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955),transform 100ms linear;
  cursor: pointer;
  opacity: .7;
}

.c1:focus,
.c1:hover {
  opacity: 1;
  outline: none;
}

.c1:active {
  opacity: 1;
}

.c1 > * {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1 > *:active {
  -webkit-transform: scale(.9);
  -ms-transform: scale(.9);
  transform: scale(.9);
}

<a
  class="c0 c1"
  href="/path"
  title="Does an action"
>
  <span
    class="c2"
    color="currentColor"
  >
    <svg
      class="c3"
      height="100%"
      preserveAspectRatio="xMidYMid meet"
      title="ADD"
      viewBox="0 0 24 24"
      width="100%"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
      />
    </svg>
  </span>
</a>
`;

exports[`<IconLink />  renders an Anchor with "href" 1`] = `
.c2 {
  display: block;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  position: relative;
  width: 1.5em;
  height: 1.5em;
  background-repeat: no-repeat;
  background-color: rgba(0,0,0,0);
  color: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c3 {
  display: block;
  pointer-events: none;
  -webkit-transform-origin: 50% 50% 0px;
  -ms-transform-origin: 50% 50% 0px;
  transform-origin: 50% 50% 0px;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  fill: currentColor;
}

.c0 {
  -webkit-transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955);
  transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955);
  color: #4C81D6;
  cursor: pointer;
}

.c0:hover,
.c0:focus {
  color: #275AAD;
}

.c1 {
  -webkit-transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955),-webkit-transform 100ms linear;
  -webkit-transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955),transform 100ms linear;
  transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955),transform 100ms linear;
  cursor: pointer;
  opacity: .7;
}

.c1:focus,
.c1:hover {
  opacity: 1;
  outline: none;
}

.c1:active {
  opacity: 1;
}

.c1 > * {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1 > *:active {
  -webkit-transform: scale(.9);
  -ms-transform: scale(.9);
  transform: scale(.9);
}

<a
  class="c0 c1"
  href="http://google.com"
  title="Does an action"
>
  <span
    class="c2"
    color="currentColor"
  >
    <svg
      class="c3"
      height="100%"
      preserveAspectRatio="xMidYMid meet"
      title="ADD"
      viewBox="0 0 24 24"
      width="100%"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
      />
    </svg>
  </span>
</a>
`;
